# dtcm-angel

./: Cargo.toml  README.md
dtcm-angel/: Cargo.toml
dtcm-angel-derive/: Cargo.toml
dtcm-angel-derive/src/: lib.rs
dtcm-angel-utils/: Cargo.toml
dtcm-angel-utils/src/: date.rs  lib.rs
dtcm-angel-utils/src/http/: api_ext.rs  client.rs  end_point.rs  header.rs  mod.rs  response.rs
dtcm-angel-utils/src/sys/: local_ip.rs  mac_addr.rs  mod.rs  otp.rs  public_ip.rs
dtcm-angel-utils/src/ws/: mod.rs  ws_stream.rs
dtcm-angel/examples/: all_holdings.rs  cancel_order.rs  candle_data.rs  holdings.rs  individual_order_status.rs  instruments.rs  ltp_data.rs  margin_calculator.rs  market_data.rs  order_book.rs  place_order.rs  rms.rs  search_scrip.rs  ws.rs
dtcm-angel/src/: lib.rs  smart_connect.rs  test_util.rs
dtcm-angel/src/api/: mod.rs
dtcm-angel/src/api/funds/: margin_calculator.rs  mod.rs  rms.rs
dtcm-angel/src/api/gtt/: cancel_rule.rs  create_rule.rs  mod.rs  modify_rule.rs  rule_detail.rs  rule_list.rs
dtcm-angel/src/api/market/: candle_data.rs  instrument.rs  ltp_data.rs  market_data.rs  mod.rs  search_scrip.rs
dtcm-angel/src/api/order/: cancel_order.rs  individual_order_status.rs  mod.rs  modify_order.rs  order_book.rs  place_order.rs  trade_book.rs
dtcm-angel/src/api/order/order_inner/: mod.rs  order_inner.rs  order_setter.rs
dtcm-angel/src/api/portfolio/: all_holdings.rs  convert_position.rs  holding.rs  mod.rs  position.rs
dtcm-angel/src/api/user/: logout.rs  mod.rs  profile.rs  session.rs  token.rs
dtcm-angel/src/api/ws/: mod.rs  ws.rs
dtcm-angel/src/api/ws/message/: best_five_data.rs  message.rs  mod.rs  quote.rs  snap_quote.rs
dtcm-angel/src/api/ws/subscription/: builder.rs  mod.rs  param.rs  request.rs  token.rs
dtcm-angel/src/api/ws/subscription/types/: action.rs  exchange.rs  mod.rs  mode.rs
dtcm-angel/src/types/: duration_type.rs  exchange_type.rs  interval.rs  market_mode.rs  mod.rs  order_type.rs  order_variety.rs  product_type.rs  rule_type.rs  transaction_type.rs
