[package]
name = "dtcm-angel"
version = "0.2.0"
edition = "2021"
authors = ["DeepTech Capital Management <research@dtcm.ai>"]
categories = ["finance", "algorithm", "algorithmic trading", "algotrade"]
description = "Angel One SDK"
documentation = "https://github.com/dtcm-ai/dtcm-angel"
homepage = "https://www.dtcm.ai"
keywords = ["angelone", "algotrading", "trading", "stocks", "investment", "api"]
license = "MIT OR Apache-2.0"
readme = "crates-io.md"
rust-version = "1.74"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.chrono]
version = "0.4"

[dependencies.byteorder]
version = "1"

[dependencies.serde_repr]
version = "0.1"

[dependencies.dtcm-angel-utils]
path = "../dtcm-angel-utils"

[dependencies.dtcm-angel-derive]
path = "../dtcm-angel-derive"

[dev-dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]

[dev-dependencies.tokio-stream]
version = "0.1"

[dev-dependencies.dotenv]
version = "0.15"

[dev-dependencies.env_logger]
version = "0.10"

[dev-dependencies.serde_json]
version = "1"
